--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
     "typescript": "~4.0.3"
   },
   "peerDependencies": {
-    "@capacitor/core": "^4.1.0"
+    "@capacitor/core": "^4.0.0 || ^4.1.0 || ^4.2.0"
   },
   "eslintConfig": {
     "extends": "@ionic/eslint-config/recommended"
